--- a/gui/ghostty/.config/ghostty/config
+++ b/gui/ghostty/.config/ghostty/config
@@ -1,5 +1,7 @@
 # font-family = JetBrainsMono Nerd Font
 font-family = Maple Mono NF
+# font-family = Pragmaveska Nerd Font
+# font-family = Iosvmata
 font-size = 16
 # adjust-font-baseline = 110
 
