--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ source=$HOME/.cache/wal/colors-hypr.conf
 #################
 ### AUTOSTART ###
 #################
-exec-once = firefox-nightly &
+exec-once = zen-browser &
 
 # exec-once = ags &
 # exec-once = systemctl --user start wallpaper_timer.service
@@ -11,7 +11,7 @@ exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = swww-daemon &
 
-exec-once = . $HOME/.config/hypr/handle_dunst.sh
+exec-once = . $HOME/.config/hypr/handle_dunst.sh &
 exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
@@ -80,13 +80,14 @@ env = "QT_QPA_PLATFORMTHEME,qt6ct"
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 15
-    gaps_out = 20
+    gaps_out = 25
 
-    border_size = 6
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = $active
-    col.inactive_border = $inactive
+    # col.inactive_border = $inactive
+    col.inactive_border = rgba(1a1a1a00)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -99,7 +100,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 12
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -284,7 +285,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 windowrulev2 = fullscreen,title:(DDNet Client)
 windowrulev2 = workspace 10, title:^(DDNet Client)$
-windowrulev2 = workspace 1, class:^(firefox-nightly)$
+windowrulev2 = workspace 1, class:^(zen)$
 windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
 windowrulev2 = workspace 7, class:^(discord)$
 windowrulev2 = workspace 7, title:^(discord-screenaudio)$
@@ -297,3 +298,6 @@ windowrulev2 = center,title:(.* Bitwarden — Firefox Nightly)$
 windowrulev2 = size 50% 50%,title:(.* Bitwarden — Firefox Nightly)$
 
 layerrule = blur,bar
+
+# no border, if only 1 window
+windowrulev2 = noborder, onworkspace:w[t1]
