--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,11 +1,13 @@
 cl_antiping 1
+cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
-cl_nameplates_strong 1
 cl_nameplates_strong_size 38
+cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
+cl_showhud_player_position 1
 cl_freezebars_alpha_inside_freeze 13
 cl_mouse_max_distance 350
 cl_smooth_spectating_time 200
@@ -17,9 +19,10 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
+ui_page 9
 ui_settings_page 3
 ui_toolbox_page 1
-ui_server_address "152.53.12.54:8301"
+ui_server_address "45.141.57.31:8405"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -127,21 +130,21 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "AUS"
-add_excluded_country "ddnet" "BHR"
 add_excluded_country "nobyfng" "RUS"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "CHL"
@@ -151,15 +154,14 @@ add_excluded_country "nobyfng" "CHN"
 add_excluded_country "nobyfng" "TWN"
 add_excluded_country "nobyfng" "KOR"
 add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "all" "FRA"
-add_excluded_country "all" "RUS"
-add_excluded_country "all" "USA"
-add_excluded_country "all" "CHL"
-add_excluded_country "all" "BRA"
 add_excluded_country "blockworlds" "RUS"
 add_excluded_country "unique" "USA"
 add_excluded_country "unique" "TWN"
 add_excluded_country "unique" "CAN"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "zCatch"
+add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
 add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Infection"
@@ -171,10 +173,6 @@ add_excluded_type "ddnet" "TeeWare"
 add_excluded_type "ddnet" "xPanic"
 add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Tutorial"
-add_excluded_type "ddnet" "iCTF"
-add_excluded_type "ddnet" "Vanilla"
-add_excluded_type "ddnet" "zCatch"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
@@ -359,6 +357,7 @@ add_friend "DarkFollowq" "HyperSonic"
 add_friend "Claanzi" "Fimozz"
 add_friend "Natsume" "FlexTape"
 add_friend "Gobrox" ""
+add_friend "с+.a//" ""
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
