--- a/wm/wallpaper/.config/systemd/user/wallpaper_timer.service
+++ b/wm/wallpaper/.config/systemd/user/wallpaper_timer.service
@@ -3,4 +3,5 @@ Description=Wallpaper changer
 
 [Service]
 ; ExecStart=/home/mori/.local/bin/wallpaper_timer.sh /home/mori/Pictures/Walls/psyww/walls/rotation "random" 8 23
-ExecStart=/home/mori/.local/bin/wallpaper_timer.sh /home/mori/Pictures/Walls/annie "random" 8 23
+; ExecStart=/home/mori/.local/bin/wallpaper_timer.sh /home/mori/Pictures/Walls/annie "random" 8 23
+ExecStart=/home/mori/.local/bin/wallpaper_timer.sh /home/mori/Pictures/Walls/Krumm "by_day_time" 4 20
