--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -19,10 +19,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 3
-ui_toolbox_page 1
-ui_server_address "45.141.57.31:8405"
+ui_settings_page 8
+ui_toolbox_page 2
+ui_server_address "45.141.57.45:8323"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -36,7 +35,7 @@ player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
 cl_skin_filter_string "whis"
-cl_assets_entities "InsomniaBrown_Entities"
+cl_assets_entities "comfort2.1"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -49,17 +48,17 @@ snd_volume 35
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 3840
-gfx_screen_height 2160
-gfx_screen_refresh_rate 240
-gfx_desktop_width 3840
-gfx_desktop_height 2160
+gfx_screen_width 1920
+gfx_screen_height 1080
+gfx_screen_refresh_rate 480
+gfx_desktop_width 1920
+gfx_desktop_height 1080
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2x.map"
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -130,8 +129,12 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "IND"
@@ -141,10 +144,6 @@ add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "RUS"
 add_excluded_country "nobyfng" "RUS"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "CHL"
@@ -158,6 +157,8 @@ add_excluded_country "blockworlds" "RUS"
 add_excluded_country "unique" "USA"
 add_excluded_country "unique" "TWN"
 add_excluded_country "unique" "CAN"
+add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "iCTF"
 add_excluded_type "ddnet" "Tutorial"
 add_excluded_type "ddnet" "zCatch"
@@ -165,14 +166,12 @@ add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
 add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "Monster"
 add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "TeeSmash"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "gCTF"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
