feat(nvim): add typst auto pin

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -209,6 +209,7 @@ bind = $mod shift, P, exec, hyprshot --mode region --raw --freeze | satty --file
 
 bind = $mod, D, exec, ignis toggle ignis_LAUNCHER
 bind = $mod shift, Q, exec, ignis toggle ignis_POWERMENU
+bind = $mod shift, B, exec, ignis toggle ignis_BAR_0
 
 bind = $mod, return, exec, ghostty --title="Ghostty"
 # bind = $mod, D, exec, anyrun
