feat(ignis): add ddnet friends

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,9 +1,8 @@
 cl_antiping 1
-cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
+cl_nameplates_strong 1
 cl_nameplates_strong_size 38
-cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
@@ -19,10 +18,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 9
-ui_toolbox_page 2
-ui_server_address "45.141.57.22:8380"
+ui_settings_page 6
+ui_toolbox_page 1
+ui_server_address "45.141.57.31:8332"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -36,7 +34,7 @@ player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
 cl_skin_filter_string "whis"
-cl_assets_entities "comfort2.1"
+cl_assets_entities "InsomniaBrown_Entities"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -49,17 +47,17 @@ snd_volume 35
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 1920
-gfx_screen_height 1080
-gfx_screen_refresh_rate 480
-gfx_desktop_width 1920
-gfx_desktop_height 1080
+gfx_screen_width 3840
+gfx_screen_height 2160
+gfx_screen_refresh_rate 240
+gfx_desktop_width 3840
+gfx_desktop_height 2160
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2.map"
+cl_background_entities "bit2x.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -127,49 +125,49 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "USA"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
-add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "TeeWare"
 add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
@@ -181,180 +179,84 @@ add_friend "Shyzo" "WM 2018"
 add_friend "Lexin" ""
 add_friend "deen" "DDNet"
 add_friend "Lady Saavik" ""
-add_friend "=carrywurst=" "Eagle"
 add_friend "=LeafGreen=" "Eagle"
 add_friend "Kasia" ""
-add_friend "el Noberto" "Eagle"
 add_friend "Feuerfaust Ace" ""
 add_friend "=FireRed=" "Eagle"
 add_friend "Mike Litoris" ""
 add_friend "Kryolith" "aaaa"
 add_friend "Vycik" ""
 add_friend "Sir Kruksic" "Kng!"
-add_friend "murpi" "胖"
 add_friend "heinrich5991" ""
 add_friend "Kill4FuN" "Utd.Legends"
 add_friend "Gruvan" "Gooranoob"
 add_friend "ZiKkie" "[!FAKE!]"
-add_friend "Sunshine" "Kimi&Nobody"
 add_friend "cris" "P2Z"
 add_friend "Cireme" "FkCovid"
 add_friend "Learath2" "DDNet"
-add_friend "Cøke" "McLOVIN"
 add_friend "estern" "BIG BOSS"
-add_friend "Cendren" "YEP"
 add_friend "hannibal" "A-Team"
-add_friend "Mizkibo" "nani."
 add_friend "Virus2k" "Pebbles"
 add_friend "=Pipou=" "T.Olympics"
 add_friend "Dám7" "HunClass"
-add_friend "Cadi" ""
-add_friend "zutzo" "fischi"
 add_friend "Starkiller" "FirstClass"
-add_friend "Phoenix" "YEP"
-add_friend "ShenFRusH" "handsome"
 add_friend "Konsti" "Somepeople"
 add_friend "DaGiese :>" "DaClan :>"
-add_friend "Chairn" "Koala"
 add_friend "MyStery.Fox" "♥ZameR♥"
 add_friend "Freezestyler" "flawLess"
 add_friend "Zeta-Hoernchen" "NUT"
-add_friend "<BµmM>" "flawLess"
 add_friend "Fegus" ""
 add_friend "Tezcan" "υηιqυє"
-add_friend "Genex" "flawLess"
 add_friend "kesvanqelt" ""
-add_friend "Dr.Acula" "GHOGH"
-add_friend "krümelmonster" "|*KoG*|"
 add_friend "Welf" ""
-add_friend "Fox" "°SoJ°"
-add_friend "Brokecdx-" "Inner peace"
-add_friend "Moni" "υηιqυє"
 add_friend "LuckyStrike" "FirstClass"
-add_friend "Yuzu" "QWuitnetst/"
 add_friend "Kaama" ""
-add_friend "Ryu" "Water Lily"
-add_friend "upoz" "Voltaire"
-add_friend "Avasus" "AwB|eS."
-add_friend "Coach" "Infamous"
-add_friend "Dozz" "freshman"
-add_friend "dlusion_" ""
 add_friend "Blyss" ""
-add_friend "eR" "▰"
-add_friend "Cactus" "smoothbrain"
-add_friend "Chrona" "Infamous"
-add_friend "Zippo`FAW" "FAW"
-add_friend "gB. | cHew*" "enCore"
 add_friend "\\\\=DLG=//" ""
 add_friend "el EX" "SestrÆagle"
-add_friend "zhadi" "ωιngs"
 add_friend "bert" ""
-add_friend "Paola" "◡‿◕"
 add_friend "Ravie" "oco"
 add_friend "Sorah" ""
-add_friend "Ama" "Veteran"
 add_friend "fikmesån" "anti-noby"
-add_friend "Newbie" ""
-add_friend "Fimp" ""
-add_friend "muell" ""
-add_friend "Xash" "匚ㄩ爪"
 add_friend "Butterkeks" ""
 add_friend "Juli" "[Krypton]"
 add_friend "Balu'" ""
-add_friend "bencie" "YEP"
-add_friend "Linah" "nk crew"
-add_friend "Ceearw" ""
-add_friend "samczykk" "✦"
-add_friend "MisterX" ""
-add_friend "Bre3kAcHu" ""
-add_friend "Dazz" "LVL X"
-add_friend "=Denkst du=" "|*KoG*|"
-add_friend "Savalic" "DDNet"
 add_friend "=phacrum=" "desufnoc"
 add_friend "shoxX" "FirstClass"
-add_friend "OsheOse" ""
-add_friend "Zweitleben" "FreeUkraine"
 add_friend "Pulsar" "oco"
-add_friend "Quasar" "oco"
-add_friend "Asuna" ""
 add_friend "Ninja_Valik" "Glory to UA"
-add_friend "Baran Nashor" ""
-add_friend "Chirua" ""
-add_friend "AMO YİYEN" ""
-add_friend "Problemkind." "|*KoG*|"
-add_friend "Gorden" "lul"
-add_friend "Brezzel" ""
-add_friend "Habibi57" ""
-add_friend "rqza" "Twitch Live"
-add_friend "Tsin" ""
 add_friend "Blade" "oco"
-add_friend "Stepfunn" "Twitch Live"
-add_friend "iTom" "Vegaming"
 add_friend "=Schulzer=" "A-Team"
-add_friend "Hesse" "оиух"
-add_friend "Lenah" "1AndOnly"
 add_friend "Nyu" "YEP"
-add_friend "에머릭" ""
-add_friend "Powerplay" "infamous"
-add_friend "qxdFox" "Łegaȼy"
-add_friend "Marsu'personic" "LoneWolf"
 add_friend "boo" ""
-add_friend "tuzii" "肥兔"
 add_friend "Berthold" ""
 add_friend "walter" "P2Z"
 add_friend "Veers" ""
-add_friend "dr. bebert" "desufnoc"
-add_friend "amelie" ""
-add_friend "Kingjulius" "GEN"
 add_friend "ZimE" "Jump with W"
 add_friend "Loop :3" ""
-add_friend "Cor" "flawLess"
-add_friend "Jimmy Jazz" ""
 add_friend "russsell" ""
 add_friend "siO" ""
 add_friend "Gooran" "A-Team"
-add_friend "=646838=" "full noob"
-add_friend "cagent" "xauusd"
 add_friend "Micro" "Eagle"
-add_friend "Gwendal" ""
-add_friend "OcFn" ""
 add_friend "TheGhast" "HyPax"
-add_friend "Vappy" "NωG | uq"
 add_friend "Skeptar" ""
-add_friend "<BµMm>" "flawLess"
-add_friend "Zhady" "YEP MY ASS"
-add_friend "paradise" "Inner peace"
-add_friend "Pimiento <3" "υׁcsm"
 add_friend "Rico" "Birds"
 add_friend "Delo" "Chicken"
-add_friend "про_100_ти" ""
-add_friend "suki" "lovetee"
 add_friend "DoubleDipp" ""
-add_friend "Lambert" ""
-add_friend "Deathstroke" "systematic"
-add_friend "NYZE" "handsome"
-add_friend "Игрок/" "ʍεøω c:"
-add_friend "HaHAxD*" "flawLess"
 add_friend "Bolox" "old noob"
 add_friend "Tropo" "MentosBoyz"
 add_friend "TeeHee" ""
-add_friend "diamantium" "нαVσc"
-add_friend "Cloudly" ""
-add_friend "clefairy'" "Spæd"
-add_friend "ty4." "Nephritis"
 add_friend "Noctua" ""
 add_friend "estguy" ""
-add_friend "Paw" "☼♫"
 add_friend "ez" "YEP"
-add_friend "muqasa" ""
 add_friend "Destoros" ""
 add_friend "mgarc" ""
-add_friend "DarkFollowq" "HyperSonic"
-add_friend "Claanzi" "Fimozz"
 add_friend "Natsume" "FlexTape"
 add_friend "Gobrox" ""
-add_friend "с+.a//" ""
 add_friend "kill the tee" "Math <3"
+add_friend "┇»MiM«┇" ""
+add_friend "sockii" ""
+add_friend "ZeroMS" "Twitch OFF"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
