--- a/gui/ghostty/.config/ghostty/config
+++ b/gui/ghostty/.config/ghostty/config
@@ -1,5 +1,6 @@
 # font-family = JetBrainsMono Nerd Font
 font-family = Maple Mono
+# font-family = Julia Mono
 # font-family = Pragmaveska Nerd Font
 # font-family = Iosvmata
 font-size = 16
