--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = swww-daemon &
 
+exec-once = . $HOME/.config/hypr/ignis.sh &
 exec-once = ignis init &
 
 # exec-once = . $HOME/.config/hypr/handle_dunst.sh &
