feat: switch to everforest and pywal themes

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,8 +1,9 @@
 cl_antiping 1
+cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
-cl_nameplates_strong 1
 cl_nameplates_strong_size 38
+cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
@@ -18,9 +19,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 6
-ui_toolbox_page 2
-ui_server_address "62.122.215.19:8333"
+ui_settings_page 9
+ui_toolbox_page 1
+ui_server_address "45.141.57.31:8417"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -34,7 +35,7 @@ player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
 cl_skin_filter_string "whis"
-cl_assets_entities "InsomniaBrown_Entities"
+cl_assets_entities "comfort2.1"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -57,7 +58,7 @@ cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2x.map"
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -125,49 +126,49 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "AUS"
-add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "TUR"
+add_excluded_country "unique" "CAN"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "USA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "RUS"
 add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "USA"
 add_excluded_country "ddnet" "CHN"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "unique" "USA"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "CAN"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "zCatch"
+add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
-add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "TeeWare"
 add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Tutorial"
-add_excluded_type "ddnet" "iCTF"
-add_excluded_type "ddnet" "Vanilla"
-add_excluded_type "ddnet" "zCatch"
+add_excluded_type "ddnet" "Block"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
