--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -26,7 +26,8 @@ $gnome-schema = org.gnome.desktop.interface
 exec-once = gsettings set $gnome-schema icon-theme "Sevi"
 exec-once = gsettings set $gnome-schema cursor-theme "phinger-cursors-light"
 exec-once = gsettings set $gnome-schema cursor-size 48
-exec-once = gsettings set $gnome-schema font-name 'Lexend 13'
+exec-once = gsettings set $gnome-schema font-name "Lexend 13"
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Everforest-Dark"
 
 ################
 ### MONITORS ###
@@ -107,8 +108,8 @@ decoration {
     rounding = 12
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.9
+    inactive_opacity = 0.8
 
     shadow {
         enabled = false
@@ -122,7 +123,7 @@ decoration {
     blur {
         enabled = true
         popups = false
-        passes = 2
+        passes = 3
         size = 5
         new_optimizations = true
         # ignore_opacity = true
@@ -296,7 +297,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = fullscreen,title:(DDNet Client)
 windowrulev2 = workspace 10, title:^(DDNet Client)$
 windowrulev2 = workspace 1, class:^(zen)$
-windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
+windowrulev2 = workspace 4, class:^(Spotify)$
 windowrulev2 = workspace 7, class:^(discord)$
 windowrulev2 = workspace 7, title:^(discord-screenaudio)$
 
