--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = swww-daemon &
 
-exec-once = . $HOME/.config/hypr/ignis.sh &
+# exec-once = . $HOME/.config/hypr/ignis.sh &
 exec-once = ignis init &
 
 # exec-once = . $HOME/.config/hypr/handle_dunst.sh &
@@ -113,9 +113,9 @@ decoration {
 
     shadow {
         enabled = false
-        range = 8
+        range = 9
         offset = -3, 5
-        render_power = 4
+        render_power = 1
         color= rgba(1a1a1a33)
     }
 
@@ -214,6 +214,7 @@ bind = $mod shift, Q, exec, ignis toggle ignis_POWERMENU
 bind = $mod shift, B, exec, ignis toggle ignis_BAR_0
 
 bind = $mod, return, exec, ghostty --title="Ghostty"
+bind = $mod shift, return, exec, kitty
 # bind = $mod, D, exec, anyrun
 
 bind = $mod, q, killactive,
@@ -309,6 +310,9 @@ windowrulev2 = center,title:(.* Bitwarden — Firefox Nightly)$
 windowrulev2 = size 50% 50%,title:(.* Bitwarden — Firefox Nightly)$
 
 layerrule = blur,^(ignis_BAR.*)$
+# layerrule = blur,^(ignis_NOTIFICATION_POPUP.*)$
+# layerrule = blur,^(ignis_LAUNCHER)$
+# layerrule = blur,^(ignis_CONTROL_CENTER)$
 windowrulev2=noblur,class:^()$,title:^()$   # don't blur context menus
 
 # no border, if only 1 window
