--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -13,15 +13,14 @@ cl_mouse_max_distance 350
 cl_smooth_spectating_time 200
 cl_show_welcome 0
 cl_download_community_skins 1
-cl_default_zoom 9
 player_use_custom_color 1
 player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 9
-ui_toolbox_page 1
-ui_server_address "45.141.57.31:8417"
+ui_settings_page 7
+ui_toolbox_page 2
+ui_server_address "45.141.57.31:8335"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -34,7 +33,7 @@ cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
-cl_skin_filter_string "whis"
+cl_skin_filter_string "merm"
 cl_assets_entities "comfort2.1"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
@@ -42,9 +41,10 @@ cl_asset_hud "Whitney"
 br_filter_string ""
 br_filter_login 0
 br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
+br_sort_order 1
 br_demo_sort 2
 br_demo_sort_order 1
-snd_volume 35
+snd_volume 15
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
@@ -56,9 +56,10 @@ gfx_desktop_height 2160
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
+cl_show_others_alpha 10
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2.map"
+cl_background_entities "bit2x.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -70,7 +71,7 @@ cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
 gfx_3d_texture_analysis_ran 1
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
-gfx_3d_texture_analysis_version "4.6.0 NVIDIA 570.86.16"
+gfx_3d_texture_analysis_version "4.6.0 NVIDIA 570.133.07"
 unbindall
 bind a "+weapon4"
 bind b "say_team (づ ᴗ _ᴗ)づ  b"
@@ -126,49 +127,49 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "USA"
 add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "ZAF"
-add_excluded_type "ddnet" "Tutorial"
-add_excluded_type "ddnet" "iCTF"
-add_excluded_type "ddnet" "zCatch"
-add_excluded_type "ddnet" "Vanilla"
-add_excluded_type "ddnet" "Test"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "IRN"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_excluded_type "ddnet" "Infection"
 add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Monster"
 add_excluded_type "ddnet" "TeeSmash"
 add_excluded_type "ddnet" "FNG"
-add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "TeeWare"
 add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "gCTF"
 add_excluded_type "ddnet" "Block"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "zCatch"
+add_excluded_type "ddnet" "Vanilla"
+add_excluded_type "ddnet" "Test"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
@@ -185,7 +186,6 @@ add_friend "Kasia" ""
 add_friend "Feuerfaust Ace" ""
 add_friend "=FireRed=" "Eagle"
 add_friend "Mike Litoris" ""
-add_friend "Kryolith" "aaaa"
 add_friend "Vycik" ""
 add_friend "Sir Kruksic" "Kng!"
 add_friend "heinrich5991" ""
@@ -204,7 +204,6 @@ add_friend "kesvanqelt" ""
 add_friend "Welf" ""
 add_friend "LuckyStrike" "FirstClass"
 add_friend "Blyss" ""
-add_friend "\\\\=DLG=//" ""
 add_friend "el EX" "SestrÆagle"
 add_friend "bert" ""
 add_friend "Ravie" "oco"
@@ -238,6 +237,11 @@ add_friend "Gobrox" ""
 add_friend "┇»MiM«┇" ""
 add_friend "sockii" ""
 add_friend "ZeroMS" "Twitch OFF"
+add_friend "wuppert" ""
+add_friend "fomjn" "DDROCK"
+add_friend "tèíñi94®0cK" "§Master³L"
+add_friend "Kryolith" ""
+add_friend "PNCKA_CTPOU" "Ł(α)"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
