--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,9 +1,8 @@
 cl_antiping 1
-cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
+cl_nameplates_strong 1
 cl_nameplates_strong_size 38
-cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
@@ -18,9 +17,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 7
-ui_toolbox_page 2
-ui_server_address "45.141.57.31:8335"
+ui_settings_page 4
+ui_toolbox_page 1
+ui_server_address "141.164.53.192:8321"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -33,15 +32,14 @@ cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
-cl_skin_filter_string "merm"
+cl_skin_filter_string "hook"
 cl_assets_entities "comfort2.1"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
 br_filter_login 0
-br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
-br_sort_order 1
+br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
 br_demo_sort 2
 br_demo_sort_order 1
 snd_volume 15
@@ -59,7 +57,7 @@ cl_race_show_ghost 0
 cl_show_others_alpha 10
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2x.map"
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -127,50 +125,51 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "ddnet" "USA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "AUS"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "KOR"
 add_excluded_country "nobyfng" "RUS"
 add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "CHN"
 add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "USA"
 add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "unique" "USA"
-add_excluded_country "unique" "TWN"
 add_excluded_country "unique" "CAN"
-add_excluded_type "ddnet" "Infection"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "USA"
+add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "FNG"
+add_excluded_type "ddnet" "Foot"
+add_excluded_type "ddnet" "Infection"
 add_excluded_type "ddnet" "Monster"
 add_excluded_type "ddnet" "TeeSmash"
-add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "iCTF"
-add_excluded_type "ddnet" "Tutorial"
-add_excluded_type "ddnet" "zCatch"
-add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "Vanilla"
+add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "zCatch"
 add_favorite 176.9.114.238:8297
+add_favorite 83.23.25.178:8338
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -205,7 +204,6 @@ add_friend "Welf" ""
 add_friend "LuckyStrike" "FirstClass"
 add_friend "Blyss" ""
 add_friend "el EX" "SestrÆagle"
-add_friend "bert" ""
 add_friend "Ravie" "oco"
 add_friend "Balu'" ""
 add_friend "=phacrum=" "desufnoc"
@@ -242,6 +240,12 @@ add_friend "fomjn" "DDROCK"
 add_friend "tèíñi94®0cK" "§Master³L"
 add_friend "Kryolith" ""
 add_friend "PNCKA_CTPOU" "Ł(α)"
+add_friend "Nudelsaft c:" "FokinLadys"
+add_friend "Apfel-Tee" "┇»MiM«"
+add_friend "bert" ""
+add_friend "Freezestyler" "flawLess"
+add_friend "Chairn" "Koala"
+add_friend "laxa" ""
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
