--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ window_padding_width 10
 copy_on_select yes
 
 # Font
-font_family Maple Mono
+font_family Maple Mono NF
 # font_family Julia Mono
 # font_family JetBrainsMono NF
 # font_family CaskaydiaCove NF
@@ -32,12 +32,12 @@ modify_font cell_height 115%
 font_features CommitMono-Regular +ss01 +ss02 +ss03 +ss04 +ss05
 font_features CommitMono-Bold    +ss01 +ss02 +ss03 +ss04 +ss05
 
-font_features MapleMonoSCNF-Regular       +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMonoSCNF-Light         +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMonoSCNF-LightItalic   +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMonoSCNF-Italic        +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMonoSCNF-BoldItalic    +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
-font_features MapleMonoSCNF-Bold          +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+font_features MapleMononF-Regular       +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05 +ss9
+font_features MapleMonoNF-Light         +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05 +ss9
+font_features MapleMonoNF-LightItalic   +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05 +ss9
+font_features MapleMonoNF-Italic        +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05 +ss9
+font_features MapleMonoNF-BoldItalic    +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05 +ss9
+font_features MapleMonoNF-Bold          +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05 +ss9
 
 font_features JetBrainsMonoNF-Regular                 +ss02 +cv18 +cv14
 font_features JetBrainsMonoNF-SemiBold                +ss02 +cv18 +cv14
