--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Everforest-Dark
 # monitor=,preferred,auto,auto
 monitor = DP-1, highres, auto, 1
 # monitor = HDMI-A-1, highres, auto, 1
-monitor = HDMI-A-1, disable
+# monitor = HDMI-A-1, disable
 # workspace=DP-1,1
 
 #############################
