--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -7,21 +7,24 @@ cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
 cl_freezebars_alpha_inside_freeze 13
+cl_showfps 1
 cl_spec_auto_sync 1
 cl_mouse_max_distance 350
 cl_smooth_spectating_time 200
 cl_show_welcome 0
 cl_download_community_skins 1
 player_use_custom_color 1
-player_color_body 6404376
-player_color_feet 2424635
-player_skin "koon"
+player_color_body 2752256
+player_color_feet 5069055
+player_skin "jeet"
 player_default_eyes 2
-ui_settings_page 4
+ui_page 9
+ui_settings_page 3
 ui_toolbox_page 1
-ui_server_address "141.164.53.192:8321"
+ui_server_address "45.141.57.22:8321"
 ui_color 3449833124
 ui_unread_news 1
+dummy_name "beetoo"
 dummy_country 638
 dummy_use_custom_color 1
 dummy_color_body 1794855
@@ -29,17 +32,16 @@ dummy_color_feet 9260800
 dummy_skin "koon"
 dummy_default_eyes 2
 cl_skip_start_menu 1
-player_name "=phacrum="
-player_clan "desufnoc"
-player_country 850
-cl_skin_filter_string "hook"
+player_name "bootee"
+player_country 585
+cl_skin_filter_string "jee"
 cl_assets_entities "comfort2.1"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
 br_filter_login 0
-br_cached_best_serverinfo_url "https://master4.ddnet.org/ddnet/15/servers.json"
+br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_demo_sort 2
 br_demo_sort_order 1
 snd_volume 15
@@ -51,13 +53,14 @@ gfx_screen_height 2160
 gfx_screen_refresh_rate 240
 gfx_desktop_width 3840
 gfx_desktop_height 2160
+gfx_high_detail 0
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_show_others_alpha 10
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2.map"
+cl_background_entities "bg/bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -69,7 +72,7 @@ cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
 gfx_3d_texture_analysis_ran 1
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
-gfx_3d_texture_analysis_version "4.6.0 NVIDIA 570.133.07"
+gfx_3d_texture_analysis_version "4.6.0 NVIDIA 575.64"
 unbindall
 bind a "+weapon4"
 bind b "say_team (づ ᴗ _ᴗ)づ  b"
@@ -211,7 +214,6 @@ add_friend "shoxX" "FirstClass"
 add_friend "Pulsar" "oco"
 add_friend "Ninja_Valik" "Glory to UA"
 add_friend "=Schulzer=" "A-Team"
-add_friend "boo" ""
 add_friend "Berthold" ""
 add_friend "walter" "P2Z"
 add_friend "Veers" ""
@@ -246,6 +248,15 @@ add_friend "bert" ""
 add_friend "Freezestyler" "flawLess"
 add_friend "Chairn" "Koala"
 add_friend "laxa" ""
+add_friend "Powerplay" "Infamous"
+add_friend "Paola" "◡‿◕"
+add_friend "ez" "YEP"
+add_friend "Aoe" "Infamous"
+add_friend "boo" ""
+add_friend "INatsuI" "laggy"
+add_friend "upoz" "Voltaire"
+add_friend "kill the tee" "Math <3"
+add_friend "Twixco" "♥"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
