--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -23,7 +23,8 @@ exec-once = openrgb --profile ~/.config/OpenRGB/blub.orp &
 # exec-once = kitty &
 
 $gnome-schema = org.gnome.desktop.interface
-exec-once = gsettings set $gnome-schema icon-theme "Sevi"
+exec-once = gsettings set $gnome-schema icon-theme "Reversal"
+# exec-once = gsettings set $gnome-schema icon-theme "Sevi"
 exec-once = gsettings set $gnome-schema cursor-theme "phinger-cursors-light"
 exec-once = gsettings set $gnome-schema cursor-size 48
 exec-once = gsettings set $gnome-schema font-name "Lexend 13"
@@ -84,15 +85,15 @@ env = "QT_QPA_PLATFORMTHEME,qt6ct"
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 15
-    gaps_out = 25
+    gaps_in = 5
+    gaps_out = 15
 
     border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = $active
     # col.inactive_border = $inactive
-    col.inactive_border = rgba(1a1a1a00)
+    col.inactive_border = rgba(1a1a1a31)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -105,11 +106,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 12
+    rounding = 5
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.9
-    inactive_opacity = 0.8
+    active_opacity = 0.95
+    inactive_opacity = 0.9
 
     shadow {
         enabled = false
@@ -161,6 +162,10 @@ misc {
     force_default_wallpaper = 0
     mouse_move_enables_dpms = false
     disable_hyprland_logo = true
+}
+
+debug {
+    disable_logs = false
 }
 
 cursor {
@@ -218,7 +223,7 @@ bind = $mod shift, return, exec, kitty
 # bind = $mod, D, exec, anyrun
 
 bind = $mod, q, killactive,
-# bind = $mod shift, Q, exit,
+bind = $mod ctrl shift, Q, exit,
 
 # layout
 bind = $mod, S, togglefloating,
