--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,8 +1,9 @@
 cl_antiping 1
+cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
-cl_nameplates_strong 1
 cl_nameplates_strong_size 38
+cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
@@ -14,14 +15,13 @@ cl_smooth_spectating_time 200
 cl_show_welcome 0
 cl_download_community_skins 1
 player_use_custom_color 1
-player_color_body 2752256
-player_color_feet 5069055
-player_skin "jeet"
+player_color_body 6404376
+player_color_feet 2424635
+player_skin "koon"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 3
+ui_settings_page 2
 ui_toolbox_page 1
-ui_server_address "45.141.57.22:8321"
+ui_server_address "45.141.57.31:8400"
 ui_color 3449833124
 ui_unread_news 1
 dummy_name "beetoo"
@@ -32,7 +32,8 @@ dummy_color_feet 9260800
 dummy_skin "koon"
 dummy_default_eyes 2
 cl_skip_start_menu 1
-player_name "bootee"
+player_name "=phacrum="
+player_clan "2 3 2 4"
 player_country 585
 cl_skin_filter_string "jee"
 cl_assets_entities "comfort2.1"
@@ -48,11 +49,11 @@ snd_volume 15
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 3840
-gfx_screen_height 2160
-gfx_screen_refresh_rate 240
-gfx_desktop_width 3840
-gfx_desktop_height 2160
+gfx_screen_width 1920
+gfx_screen_height 1080
+gfx_screen_refresh_rate 480
+gfx_desktop_width 1920
+gfx_desktop_height 1080
 gfx_high_detail 0
 gfx_refresh_rate 960
 cl_race_binds_set 1
@@ -257,6 +258,8 @@ add_friend "INatsuI" "laggy"
 add_friend "upoz" "Voltaire"
 add_friend "kill the tee" "Math <3"
 add_friend "Twixco" "♥"
+add_friend "Cendren" "rare"
+add_friend "Gooran" "A-Team"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
