--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -3,12 +3,14 @@ source=$HOME/.cache/wal/colors-hypr.conf
 #################
 ### AUTOSTART ###
 #################
-exec-once = zen-browser &
+# exec-once = zen-browser &
+exec-once = vivaldi &
 
 # exec-once = ags &
 # exec-once = systemctl --user start wallpaper_timer.service
 exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
-exec-once = wlsunset -l 49.87 -L 8.65 &
+# exec-once = wlsunset -l 49.87 -L 8.65 &
+exec-once = gammastep-indicator &
 exec-once = swww-daemon &
 
 # exec-once = . $HOME/.config/hypr/ignis.sh &
@@ -214,7 +216,8 @@ bind = ,XF86AudioMicMute, exec, pamixer --default-source -t
 bind = $mod, P, exec, hyprshot --mode region --output $HOME/Pictures/Scrots --freeze
 bind = $mod shift, P, exec, hyprshot --mode region --raw --freeze | satty --filename - --fullscreen --output-filename $HOME/Pictures/Scrots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 
-bind = $mod, D, exec, ignis toggle ignis_LAUNCHER
+bind = $mod, D, exec, vicinae vicinae://toggle
+# bind = $mod, D, exec, ignis toggle ignis_LAUNCHER
 bind = $mod shift, Q, exec, ignis toggle ignis_POWERMENU
 bind = $mod shift, B, exec, ignis toggle ignis_BAR_0
 
@@ -303,6 +306,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = fullscreen,title:(DDNet Client)
 windowrulev2 = workspace 10, title:^(DDNet Client)$
 windowrulev2 = workspace 1, class:^(zen)$
+windowrulev2 = workspace 1, class:^(Vivaldi-stable)$
 windowrulev2 = workspace 4, class:^(Spotify)$
 windowrulev2 = workspace 7, class:^(discord)$
 windowrulev2 = workspace 7, title:^(discord-screenaudio)$
@@ -311,8 +315,12 @@ windowrulev2 = workspace 7, title:^(discord-screenaudio)$
 windowrulev2 = center,title:(Save As)
 windowrulev2 = size 50% 50%,title:(Save As)
 
-windowrulev2 = center,title:(.* Bitwarden — Firefox Nightly)$
-windowrulev2 = size 50% 50%,title:(.* Bitwarden — Firefox Nightly)$
+windowrulev2 = float,title:(Bitwarden - Vivaldi)
+windowrulev2 = center,title:(Bitwarden - Vivaldi)
+
+windowrulev2 = float,title:(Vivaldi Settings: General - Vivaldi)
+windowrulev2 = center,title:(Vivaldi Settings: General - Vivaldi)
+windowrulev2 = size 50% 50%,title:(Vivaldi Settings: General - Vivaldi)
 
 layerrule = blur,^(ignis_BAR.*)$
 # layerrule = blur,^(ignis_NOTIFICATION_POPUP.*)$
