--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -19,9 +19,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 2
-ui_toolbox_page 1
-ui_server_address "45.141.57.31:8400"
+ui_settings_page 9
+ui_toolbox_page 2
+ui_server_address "51.89.23.241:8338"
 ui_color 3449833124
 ui_unread_news 1
 dummy_name "beetoo"
@@ -33,10 +33,10 @@ dummy_skin "koon"
 dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "=phacrum="
-player_clan "2 3 2 4"
+player_clan "desufnoc"
 player_country 585
 cl_skin_filter_string "jee"
-cl_assets_entities "comfort2.1"
+cl_assets_entities "ddnet_n9_edit_last_transperent_20"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -49,11 +49,11 @@ snd_volume 15
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 1920
-gfx_screen_height 1080
-gfx_screen_refresh_rate 480
-gfx_desktop_width 1920
-gfx_desktop_height 1080
+gfx_screen_width 3840
+gfx_screen_height 2160
+gfx_screen_refresh_rate 240
+gfx_desktop_width 3840
+gfx_desktop_height 2160
 gfx_high_detail 0
 gfx_refresh_rate 960
 cl_race_binds_set 1
@@ -61,7 +61,7 @@ cl_race_show_ghost 0
 cl_show_others_alpha 10
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bg/bit2.map"
+cl_background_entities "bg/bit2x.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
