--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ exec-once = gammastep-indicator &
 exec-once = swww-daemon &
 
 # exec-once = . $HOME/.config/hypr/ignis.sh &
+exec-once = vicinae server &
 exec-once = ignis init &
 
 # exec-once = . $HOME/.config/hypr/handle_dunst.sh &
@@ -289,6 +290,8 @@ bind = $mod SHIFT, 0, movetoworkspace, 10
 # Scroll through existing workspaces with mod + scroll
 bind = $mod, mouse_down, workspace, e+1
 bind = $mod, mouse_up, workspace, e-1
+
+bind = $mod, tab, workspace, prev
 
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
