feat: try new zellij binds

--- a/gui/ghostty/.config/ghostty/config
+++ b/gui/ghostty/.config/ghostty/config
@@ -28,4 +28,13 @@ confirm-close-surface = false
 # palette = 0=#252525
 # palette = 8=#454545
 
+keybind = alt+one=unbind
+keybind = alt+two=unbind
+keybind = alt+three=unbind
+keybind = alt+four=unbind
+keybind = alt+five=unbind
+keybind = alt+six=unbind
+keybind = alt+seven=unbind
+keybind = alt+eight=unbind
+
 theme = "/home/mori/.cache/wal/colors-ghostty.conf"
