feat: zellij qap layout

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -19,12 +19,12 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
+ui_page 9
 ui_settings_page 9
-ui_toolbox_page 2
-ui_server_address "45.141.57.22:8331"
+ui_server_address "57.128.201.180:8311"
 ui_color 3449833124
 ui_unread_news 1
-dummy_name "beetoo"
+dummy_name "bootee"
 dummy_country 638
 dummy_use_custom_color 1
 dummy_color_body 1794855
