--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -205,6 +205,10 @@ gestures {
 ####################
 ### KEYBINDINGSS ###
 ####################
+binds {
+        hide_special_on_workspace_change = true
+}
+
 $mod = SUPER # Sets "Windows" key as main modifier
 
 binde = , XF86MonBrightnessUp,     exec, $brightness 5%+
